make target configurable

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div id="sitn-map" class="map"></div>
     <script src="./js/sitnlayers.js"></script>
     <script>
+      map.createMap('sitn-map')
     </script>
   </body>
 </html>
