include ol-ext, add interactions

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8"> 
     <link rel="stylesheet" href="assets/ol/ol.css" type="text/css">
+    <link rel="stylesheet" href="assets/ol-ext/ol-ext.min.css" type="text/css">
     <style>
       .map {
         height: 400px;
@@ -15,6 +16,7 @@
     <script src="assets/ol/ol.js"></script>
     <script src="assets/proj4/proj4.js"></script>
     <script src="assets/jquery/jquery-3.3.1.min.js"></script>
+    <script src="assets/ol-ext/ol-ext.min.js"></script>
     <title>sitnLayers</title>
   </head>
   <body>
