--- a/index.html
+++ b/index.html
@@ -1,33 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8"> 
-    <link rel="stylesheet" href="assets/ol/ol.css" type="text/css">
-    <link rel="stylesheet" href="assets/ol-ext/ol-ext.min.css" type="text/css">
-    <style>
-      .map {
-        height: 400px;
-        width: 100%;
-      }
-      #inputwkt {
-        width: 100%;
-      }
-    </style>
-    <script src="assets/ol/ol.js"></script>
-    <script src="assets/proj4/proj4.js"></script>
-    <script src="assets/jquery/jquery-3.3.1.min.js"></script>
-    <script src="assets/ol-ext/ol-ext.min.js"></script>
-    <title>sitnLayers</title>
-  </head>
-  <body>
-    <h2>Exemple 1</h2>
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="assets/ol/ol.css" type="text/css">
+  <link rel="stylesheet" href="assets/ol-ext/ol-ext.min.css" type="text/css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/default.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/highlight.min.js"></script>
+  <style>
+    .map {
+      height: 400px;
+      width: 100%;
+    }
+
+    #inputwkt {
+      width: 100%;
+    }
+  </style>
+  <script src="assets/ol/ol.js"></script>
+  <script src="assets/proj4/proj4.js"></script>
+  <script src="assets/jquery/jquery-3.3.1.min.js"></script>
+  <script src="assets/ol-ext/ol-ext.min.js"></script>
+  <title>sitnLayers</title>
+</head>
+
+<body>
+  <div class="jumbotron text-center">
+    <h1>sitnLayers</h1>
+  </div>
+  <div class="container">
+    <h3>Exemple 1</h3>
     <p>Affiche un WKT</p>
-    <textarea name="inputwkt" id="inputwkt" rows="2">POLYGON((2540000 1203000,2550000 1213000,2560000 1203000,2540000 1203000))</textarea>
-    <button onclick="map.loadWKT()">Load</button>
+    <div class="form-group">
+      <textarea class="form-control" name="inputwkt" id="inputwkt" rows="2">POLYGON((2540000 1203000,2550000 1213000,2560000 1203000,2540000 1203000))</textarea>
+    </div>
+    <div class="form-group">
+      <button class="btn btn-primary" onclick="map1.loadWKT()">Charger</button>
+    </div>
     <div id="sitn-map" class="map"></div>
+
+
     <script src="./js/sitnlayers.js"></script>
     <script>
-      map.createMap('sitn-map')
+      // Création de la carte
+      map1 = new SitnMap()
+      map1.createMap({
+        target: 'sitn-map'
+      })
     </script>
-  </body>
+    <hr>
+    <h3>Exemple 2</h3>
+    <p>Edition avec export WKT</p>
+
+    <div id="sitn-map-2" class="map"></div>
+    <div class="form-group">
+      <label for="output">Résultat de l'export</label>
+      <textarea class="form-control" name="output" id="outputwkt" rows="2"></textarea>
+    </div>
+
+
+    <script>
+      // Création de la carte
+      map2 = new SitnMap()
+      map2.createMap({
+        target: 'sitn-map-2',
+        buttons: [
+          'edit',
+          'createPoint',
+          'createLineString',
+          'createPolygon',
+          'save'
+        ],
+        saveFormats: ['WKT'],
+        baseLayers: [
+          '1-plan_ville',
+          '3-plan_cadastral',
+          'ortho2017'
+        ]
+      })
+
+      // Connexion à l'événement WKTReady
+      window.addEventListener('WKTReady', function (e) {
+        $('#outputwkt').html(e['detail']['data']) 
+      })
+    </script>
+  </div>
+</body>
+
 </html>
