--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         ],
         saveFormats: ['WKT'],
         baseLayers: [
-          '1-plan_ville',
+          'plan_ville',
           '3-plan_cadastral',
           'ortho2017'
         ]
