--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         saveFormats: ['WKT'],
         baseLayers: [
           'plan_ville',
-          '3-plan_cadastral',
+          'plan_cadastral',
           'ortho2017'
         ]
       })
