--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         baseLayers: [
           'plan_ville',
           'plan_cadastral',
-          'ortho2017'
+          'ortho'
         ]
       })
 
