--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="assets/ol/ol.css" type="text/css">
   <link rel="stylesheet" href="assets/ol-ext/ol-ext.min.css" type="text/css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/default.min.css">
+  <link rel="stylesheet" href="assets/fontawesome/css/all.css">
   <style>
     .map {
       height: 400px;
@@ -17,10 +17,14 @@
       width: 100%;
     }
   </style>
-  <script src="assets/ol/ol.js"></script>
-  <script src="assets/proj4/proj4.js"></script>
+  <script src="assets/polyfills/classList.js"></script>
+  <script src="assets/polyfills/object-assign.js"></script>
+  <script src="assets/polyfills/url-polyfill.min.js"></script>
   <script src="assets/jquery/jquery-3.3.1.min.js"></script>
+  <script src="assets/proj4/proj4.js"></script>
+  <script src="assets/ol/ol.js"></script>
   <script src="assets/ol-ext/ol-ext.min.js"></script>
+  <script src="./js/sitnlayers.js"></script>
   <title>sitnLayers</title>
 </head>
 
@@ -40,7 +44,6 @@
     <div id="sitn-map" class="map"></div>
 
 
-    <script src="./js/sitnlayers.js"></script>
     <script>
       // Création de la carte
       map1 = new SitnMap()
@@ -54,7 +57,7 @@
 
     <div id="sitn-map-2" class="map"></div>
     <div class="form-group">
-      <label for="output">Résultat de l'export</label>
+      <label for="outputwkt">Résultat de l'export</label>
       <textarea class="form-control" name="output" id="outputwkt" rows="2"></textarea>
     </div>
 
