--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
     </div>
     <div id="sitn-map" class="map"></div>
 
-
     <script>
       // Création de la carte
       map1 = new SitnMap()
@@ -51,16 +50,19 @@
         target: 'sitn-map'
       })
     </script>
+
     <hr>
+
     <h3>Exemple 2</h3>
     <p>Edition avec export WKT</p>
-
     <div id="sitn-map-2" class="map"></div>
     <div class="form-group">
       <label for="outputwkt">Résultat de l'export</label>
       <textarea class="form-control" name="output" id="outputwkt" rows="2"></textarea>
     </div>
-
+    <div class="form-group">
+      <button class="btn btn-primary" onclick="save()">Sauvegarder</button>
+    </div>
 
     <script>
       // Création de la carte
@@ -71,10 +73,8 @@
           'edit',
           'createPoint',
           'createLineString',
-          'createPolygon',
-          'save'
+          'createPolygon'
         ],
-        saveFormats: ['WKT'],
         baseLayers: [
           'plan_ville',
           'plan_cadastral',
@@ -82,10 +82,11 @@
         ]
       })
 
-      // Connexion à l'événement WKTReady
-      window.addEventListener('WKTReady', function (e) {
-        $('#outputwkt').html(e['detail']['data']) 
-      })
+      function save() {
+        data = map2.getWKTData()
+        $('#outputwkt').html(data)
+      }
+
     </script>
   </div>
 </body>
