--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
       width: 100%;
     }
   </style>
-  <script src="assets/polyfills/classList.js"></script>
-  <script src="assets/polyfills/object-assign.js"></script>
-  <script src="assets/polyfills/url-polyfill.min.js"></script>
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Element.prototype.classList,URL,Object.assign"></script>
   <script src="assets/jquery/jquery-3.3.1.min.js"></script>
   <script src="assets/proj4/proj4.js"></script>
   <script src="assets/ol/ol.js"></script>
