--- a/index.html
+++ b/index.html
@@ -129,6 +129,58 @@
 
     <hr>
 
+    <h3>Exemple 4</h3>
+    <p>Ajouter, modifier et supprimer un marker selon une paire de coordonnées Est-Nord. Recenter la carte.</p>
+    <div class="row form-group">
+      <div class="col">
+        <label for="coorde">Est</label>
+        <input class="form-control" type="number" name="coorde" id="coorde" value="2540000">
+      </div>
+      <div class="col">
+        <label for="coorde">Nord</label>
+        <input class="form-control" type="number" name="coordn" id="coordn" value="1203000">
+      </div>
+    </div>
+    <div class="form-group">
+      <button class="btn btn-primary" onclick="addMarker()">Ajouter</button>
+      <button class="btn btn-info" onclick="updateMarker()">Mettre à jour</button>
+      <button class="btn btn-danger" onclick="map4.removeMarker()">Supprimer</button>
+      <button class="btn btn-dark" onclick="recenterMap()">Recentrer la carte</button>
+    </div>
+    <div id="sitn-map-4" class="map"></div>
+
+    <script>
+      // Création de la carte
+      map4 = new SitnMap()
+      map4.createMap({
+        target: 'sitn-map-4'
+      })
+
+      // construction du tableau de coordonnées à partir des inputs
+      getCoord = function() {
+        return [$('#coorde').val(), $('#coordn').val()]
+      }
+
+      // ajouter un marker en lui passant une couleur (optionnel)
+      addMarker = function() {
+        map4.addMarker(getCoord(), "#4286f4")
+      }
+
+      // mettre à jour un marker
+      updateMarker = function() {
+        map4.updateMarker(getCoord())
+      }
+
+      // recentrer la carte à partir d'une paire 
+      // de coordonées et d'un niveau de zoom
+      recenterMap = function() {
+        map4.recenterMap(getCoord(), 14)
+      }
+      
+    </script>
+
+    <hr>
+
   </div>
 </body>
 
