--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="assets/ol/ol.css" type="text/css">
   <link rel="stylesheet" href="assets/ol-ext/ol-ext.min.css" type="text/css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="assets/fontawesome/css/all.css">
   <style>
     .map {
@@ -22,6 +23,11 @@
   </style>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Element.prototype.classList,URL,Object.assign"></script>
   <script src="assets/jquery/jquery-3.3.1.min.js"></script>
+  <script
+			  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+			  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+			  crossorigin="anonymous"></script>
+		
   <script src="assets/proj4/proj4.js"></script>
   <script src="assets/ol/ol.js"></script>
   <script src="assets/ol-ext/ol-ext.min.js"></script>
@@ -181,6 +187,27 @@
 
     <hr>
 
+    <h3>Exemple 5</h3>
+    <p>Recherche</p>
+    <div class="form-group">
+      <div id="search-box"></div>
+    </div>
+    <div id="sitn-map-5" class="map"></div>
+
+    <script>
+      // Création de la carte
+      map5 = new SitnMap()
+      map5.createMap({
+        target: 'sitn-map-5'
+      })
+
+      searchBox = map5.searchBox({
+        div: 'search-box',
+        map: map5
+      })
+    </script>
+
+    <hr>
   </div>
 </body>
 
