--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <meta http-equiv="Expires" content="0" />
   <link rel="stylesheet" href="assets/ol/ol.css" type="text/css">
   <link rel="stylesheet" href="assets/ol-ext/ol-ext.min.css" type="text/css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="assets/fontawesome/css/all.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <style>
     .map {
       height: 400px;
@@ -23,11 +22,7 @@
   </style>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Element.prototype.classList,URL,Object.assign"></script>
   <script src="assets/jquery/jquery-3.3.1.min.js"></script>
-  <script
-			  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-			  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
-			  crossorigin="anonymous"></script>
-		
+  <script src="assets/jquery-ui/jquery-ui.min.js"></script>
   <script src="assets/proj4/proj4.js"></script>
   <script src="assets/ol/ol.js"></script>
   <script src="assets/ol-ext/ol-ext.min.js"></script>
