--- a/index.html
+++ b/index.html
@@ -334,7 +334,8 @@
           'createPoint',
         ],
         drawSimpleGeom: true,
-        pointStyle: 'marker', // il faut un svg dans img
+        pointStyle: 'marker',
+        markerImage: 'img/marker.svg',
         drawColor: '#cc0000',
       });
       
