use fit instead of setCenter

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="col">
-          <button id="map2-center" class="btn btn-dark mb-2" type="button">Obtenir le centre</button>
+          <button id="map2-center" class="btn btn-dark mb-2" type="button">Obtenir le centre des objets dessinés</button>
           <label class="mb-2"><span class="badge" id="getcoorde2"></span> <span class="badge badge-secondary"
               id="getcoordn2"></span></label>
         </div>
@@ -217,7 +217,7 @@
       <button id="map5-upd-marker" class="btn btn-info">Mettre à jour</button>
       <button class="btn btn-danger" onclick="map4.removeMarker()">Supprimer</button>
       <button id="map5-recenter" class="btn btn-dark">Recentrer la carte</button>
-      <button id="map5-get-center" class="btn btn-dark">Obtenir le centre</button>
+      <button id="map5-get-center" class="btn btn-dark">Obtenir le centre des objets dessinés</button>
       <label><span class="badge" id="getcoorde"></span> <span class="badge badge-secondary"
           id="getcoordn"></span></label>
     </div>
